# luppolo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/ast/: luppolo_ast_visitor.py  optimizer.py  threading.py  tree.py
src/error/: luppolo_error_listener.py
src/grammar/: Luppolo.g4  Luppolo.interp  Luppolo.tokens  LuppoloLexer.interp  LuppoloLexer.py  LuppoloListener.py  LuppoloParser.py  LuppoloVisitor.py
src/interpreter/: expression.py  interpreter.py  stdlib.py
test/: test_io.py  test_luppolo.py  test_programs.py
test/test_src/expression/: DerivePolynomial.lpp  Eval.lpp  Expand.lpp  SimpleDerive.lpp  SimplifyAdd.lpp  SimplifyMul.lpp  SimplifyNum.lpp  SimplifyPow.lpp  Substitute.lpp
test/test_src/instruction/: Declaration.lpp  Foreach.lpp  If.lpp  IfElse.lpp  Repeat.lpp  Return.lpp  While.lpp
test/test_src/programs/: Factorial.lpp  Fibonacci.lpp  SquareTerms.lpp
